# rrap-cost-linker

./: .buildinfo  .gitignore  README.md  cost_models.html  environment_setup.html  example_workflow.html  generate_rme_results.html  genindex.html  index.html  inspect_nc.py  metrics.html  objects.inv  output_file_format.html  plot_metrics.py  py-modindex.html  pyproject.toml  quantitative_check.py  search.html  searchindex.js
.doctrees/: cost_models.doctree  environment.pickle  environment_setup.doctree  example_workflow.doctree  generate_rme_results.doctree  index.doctree  metrics.doctree  output_file_format.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/rrap_cl/: index.doctree
.doctrees/context/: 01_CostModels.doctree  02_EcologicalModels.doctree  03_LinkingCostAndEcologicalModels.doctree  04_AppendicesAndAcknowledgements.doctree  Context.doctree
.github/workflows/: documentation.yml
_sources/: environment_setup.md.txt  output_file_format.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/rrap_cl/: index.rst.txt
_sources/context/: 01_CostModels.md.txt  02_EcologicalModels.md.txt  04_AppendicesAndAcknowledgements.md.txt  Context.md.txt
autoapi/: index.html
autoapi/rrap_cl/: index.html
autoapi/rrap_cl/calculate_metrics/: index.html
autoapi/rrap_cl/cost_calculations/: index.html
autoapi/rrap_cl/handlers/: index.html
autoapi/rrap_cl/parallel_cost_sampling/: index.html
autoapi/rrap_cl/runner/: index.html
context/: 01_CostModels.html  02_EcologicalModels.html  03_LinkingCostAndEcologicalModels.html  04_AppendicesAndAcknowledgements.html  Context.html
cost_eco_model_linker/: 3.8.0_deploy_config.csv  3.8.0_prod_config.csv  3.9.0_deploy_config.csv  3.9.1_prod_config.csv  3.9.6_LM_config.csv  __init__.py  calculate_metrics.py  cost_calculations.py  parallel_cost_sampling.py  process_RME_data.py  reef_distances.py  representative_reef_locations.csv  runner.py  sampling.py  setup_results.py
cost_eco_model_linker/handlers/: __init__.py  excel_handlers.py  spreadsheet_interface.py
docs/source/: conf.py  config.json  cost_models.md  cost_models.rst  environment_setup.md  environment_setup.rst  example_workflow.md  example_workflow.rst  generate_rme_results.md  generate_rme_results.rst  index.md  index.rst  metrics.md  metrics.rst  output_file_format.md  output_file_format.rst  running_rme.jl
examples/: example_process_rme_runs.py  example_process_rme_runs_para.py
rrap_cl/: 3.9.1_prod_config.csv  __init__.py  cost_calculations.py  parallel_cost_sampling.py  process_RME_data.py  representative_port_locations.csv  representative_reef_locations.csv  runner.py
rrap_cl/handlers/: excel_handlers.py  spreadsheet_interface.py
src/: calculate_metrics.py  cost_calculations.py  example-process-rme-runs-para.py  example-process-rme-runs.py  parallel_cost_sampling.py  process_RME_data.py  reef_distances.py  sampling.py
src/datasets/: econ_spatial.csv
tests/: conftest.py  test_eia_consistency.py
(+46 files in other folders)
