[project]
name = "cost_eco_model_linker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "multiprocess>=0.70.18",
    "netcdf4>=1.7.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "pywin32>=310; sys_platform == 'win32'",
    "pyyaml>=6.0.2",
    "salib>=1.5.2",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ipdb>=0.13.13",
    "ipython>=9.6.0",
    "py-spy>=0.4.1",
    "furo>=2024.8.6",
    "myst-parser>=2.0",
    "sphinx>=8.2.3",
    "sphinx-autoapi>=3.6.0",
    "sphinx-design>=0.5.0",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-autobuild>=2025.8.25",
    "linkify-it-py>=2.0.3",
]
lint = [
    "ruff>=0.14.1",
]

[tool.setuptools]
packages = ["cost_eco_model_linker"]

[project.scripts]
# Build the HTML documentation
docs-build = "cost_eco_model_linker.docs:build"

# Clean the build directory and then build
docs-clean = "cost_eco_model_linker.docs:clean"

# Build and open the docs in your browser (requires sphinx-autobuild)
docs-dev = "cost_eco_model_linker.docs:dev"
